--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ gunicorn==20.0.4
 pip==20.3
 psycopg2==2.8.5
 pytz==2020.4
-setuptools==50.3.2.post20201201
+setuptools==50.3.2
 sqlparse==0.4.1
 wheel==0.36.0
